# hin2n

Hin2n_android/: build.gradle
Hin2n_android/app/: CMakeLists.txt
Hin2n_android/app/src/main/: AndroidManifest.xml
Hin2n_android/app/src/main/cpp/include/: CMakeLists.txt  native-lib.cpp
Hin2n_android/app/src/main/java/wang/switchy/hin2n/activity/: CameraControlActivity.java  MainActivity.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/storage/db/base/: N2NSettingModelDao.java
Hin2n_android/app/src/main/java/wang/switchy/hin2n/storage/db/base/model/: N2NSettingModel.java
Hin2n_android/app/src/main/res/layout/: activity_camera_ontrol.xml  activity_main.xml  activity_main_land.xml
Hin2n_android/gradle/wrapper/: gradle-wrapper.properties
